--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -1,12 +1,21 @@
 pipeline {
-  agent {
-    docker { image 'node:16-alpine' }
-  }
-  stages {
-    stage('Test') {
-      steps {
-        sh 'node --version'
-      }
+    agent any
+
+    stages {
+        stage('Checkout') {
+            steps {
+                checkout scm
+            }
+        }
+
+        stage('Build') {
+            steps {
+                script {
+                    docker.image('node:16-alpine').inside('-w /c/ProgramData/Jenkins/.jenkins/workspace/pipe') {
+                        sh 'node --version'
+                    }
+                }
+            }
+        }
     }
-  }
 }
